--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        xiaofuzi<br />
-        Cofounder of <a href="http://github.com/">GitHub</a>
+        xiaofuzi
       </p>
     </div>
     <div class="contact">
