首页样式修改,网址导航添加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           							<a href="/category.html">分类浏览</a>
         					</li>
         					<li>
-          							<a href="/websites">网址收藏</a>
+          							<a href="/websites.html">网址收藏</a>
         					</li>
         					<li >
           							<a href="/books">书单</a>
