--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,12 @@
 	<!--  bootstrap theme -->
 	<link rel="stylesheet" href="/assets/css/bootstrap.css"/>
 	<link rel="stylesheet" href="/assets/css/custom.css"/>
+       <link rel="stylesheet" href="/assets/css/back-to-top.css"/>
 
-
+       <script type="text/javascript" src="/assets/js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+       
+       <script type="text/javascript" src="/assets/js/back-to-top.js"></script>
 </head>
 	<body>
 		<!-- the header theme -->
@@ -55,6 +58,7 @@
 			</div>
 		</div>
 		<div id="footer">
+                      <p id="back-to-top"><a href="#top"><span></span>返回顶部</a></p>
 			<div class="container-fluid text-center">
 				<p>关于我</p>
 			</div>
