--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,5 +6,12 @@ layout: default
 	<div class="post-header">
 		<h1>{{ page.title }}</h1>
 	</div>
-	{{ content }}
+	<div id="post-sidebar">
+		<ul>
+		</ul>
+	</div>
+	<div id="post-content">
+		{{ content }}
+	</div>
 </div>
+<script type="text/javascript" src="/assets/js/post-sidebar.js"></script>
